Reverb Nation scraper finished

--- a/Scrappers/Band Scrappers/Bands_In_Town_Template.ipynb
+++ b/Scrappers/Band Scrappers/Bands_In_Town_Template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,8 @@
     "import os\n",
     "import json\n",
     "\n",
+    "from OhmicityShared import ohmicity_shared\n",
+    "\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "from selenium.webdriver.common.by import By\n",
@@ -26,24 +28,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "====== WebDriver manager ======\n",
-      "Current google-chrome version is 97.0.4692\n",
-      "Get LATEST chromedriver version for 97.0.4692 google-chrome\n",
-      "Driver [/Users/nathanhedgeman/.wdm/drivers/chromedriver/mac64/97.0.4692.71/chromedriver] found in cache\n",
-      "/var/folders/qj/lf30psn544jbkxz0g333d31m0000gn/T/ipykernel_14356/453488655.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = 'https://www.bandsintown.com/'\n",
     "\n",
@@ -53,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,22 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "venue_array = [\n",
-    "    '210', \"Blue Rooster\", 'Burger-ish', \"River Roo\", \"Cage Brewing\", \"Cask & Ale\", \"Cask and Ale\", \"Coconut\", \"Cottonmouth\", \"Daiquiri Deck Raw Bar Siesta Key\", \"Darwin Brewing\", \"Del Frisco\", \"Dockside\", \"Drunken Clam\",\n",
-    "    \"Englewoods On Dearborn\", \"Floridian Social Club\", \"Flute & Dram\", \"Gator Club\", \"Gilligan\", \"Green Iguana\", \"Hideaway\", \"Independent Bar St Petersburg\", \"Independent Bar and Cafe Tampa\", \"Island Time Bar and Grill\",\n",
-    "    \"Joyland\", \"Mad Hatters\", \"Marina Jack\", \"Mattison's City Grille\", \"Mattison's Riverwalk Grille\", \"Motorworks Brewing\", \"New World Brewery\", \"O'Brien\", \"Pete's Place North\", \"Ringside Cafe\", \"Ruby's Elixir\",\n",
-    "    \"SandBar\", \"Hard Rock\", \"Sharky\", \"Siesta Key Oyster Bar\", \"Skipper\", \"St Pete Side Lot\", \"Stottlemyer\", \"Straggler\", \"TJ Carney\", \"Tamiami Tap\", \"The Castle\", \"The Pub Tampa Bay\", \"The Tavern At Bayboro\",\n",
-    "    \"Whiskey Barrel\", \"Whiskey Wings - St Peterburg\", \"Toasted Monkey\", \"White Elephant Pub\", \"Wild Rover Brewery\", \n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +96,7 @@
     "    venue_link = venue_div.find_element(By.TAG_NAME, 'a')\n",
     "    venue_name = venue_link.text\n",
     "\n",
-    "    if any([x in venue_name for x in venue_array]): \n",
+    "    if any([x in venue_name for x in ohmicity_shared.venue_array]): \n",
     "                pass\n",
     "    else:\n",
     "                continue\n",
@@ -149,17 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selwyn Birchwood Complete!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.quit()\n",
     "shows = {}\n",
@@ -168,7 +132,7 @@
     "\n",
     "\n",
     "# %%\n",
-    "save_path = '/Volumes/Work/Face2Face/Xity/Scrappers/Show Data/Band Data'\n",
+    "save_path = ohmicity_shared.band_data_path\n",
     "file_name = band_name + '.json'\n",
     "complete_name = os.path.join(save_path, file_name)\n",
     "\n",
