updated some scrappers

--- a/Scrappers/Band Scrappers/Bands_In_Town_Template.ipynb
+++ b/Scrappers/Band Scrappers/Bands_In_Town_Template.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/qj/lf30psn544jbkxz0g333d31m0000gn/T/ipykernel_43356/3714238019.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(executable_path= '/Volumes/Work/Face2Face/Xity/streetTeam/Scrappers/chromedriver', options = options)\n"
+     ]
+    }
+   ],
    "source": [
     "options = Options()\n",
     "options.headless = False\n",
     "driver = webdriver.Chrome(executable_path= '/Volumes/Work/Face2Face/Xity/streetTeam/Scrappers/chromedriver', options = options)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.get('https://www.bandsintown.com/a/8596214-selwyn-birchwood-band?')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selwyn Birchwood Band\n"
+     ]
+    }
+   ],
+   "source": [
+    "band_name = driver.find_element(By.XPATH, '//*[@id=\"main\"]/div/div/div[2]/div[2]/div[1]/div/div[3]/div[1]/div[2]/div[1]').text.strip()\n",
+    "print(band_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show_more_button = driver.find_element(By.XPATH, '//*[@id=\"main\"]/div/div/div[2]/div[2]/div[3]/div[1]/div[3]/div[2]/div/div[2]/div')\n",
+    "show_more_button.click()"
    ]
   },
   {
@@ -63,9 +109,9 @@
     "    \n",
     "    driver.get(url)\n",
     "\n",
-    "    band_name = driver.find_element(By.CLASS_NAME, '_2nzteM_uGca2Jnei9WwoIO').text.strip()\n",
+    "    band_name = driver.find_element(By.XPATH, '//*[@id=\"main\"]/div/div/div[2]/div[2]/div[1]/div/div[3]/div[1]/div[2]/div[1]').text.strip()\n",
     "\n",
-    "    show_more_button = driver.find_element(By.CLASS_NAME, '_1GaeyllMT79LYiH-6HrT56')\n",
+    "    show_more_button = driver.find_element(By.XPATH, '//*[@id=\"main\"]/div/div/div[2]/div[2]/div[3]/div[1]/div[3]/div[2]/div/div[2]/div')\n",
     "    show_more_button.click()\n",
     "\n",
     "    all_events = driver.find_element(By.CLASS_NAME, 'qznXLxZY-XWcgeMFMR1So')\n",
