--- a/Scrappers/Venue Scrappers/Selenium JAVA Scrappers/Coconut Charlie's_Scrapper 2.ipynb
+++ b/Scrappers/Venue Scrappers/Selenium JAVA Scrappers/Coconut Charlie's_Scrapper 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "bacd747b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "8bc86ef3-2561-42ec-8140-b366cf5b57cd",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "d9c33683",
    "metadata": {},
    "outputs": [
@@ -136,13 +136,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - \n",
       "\n",
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 96.0.4664\n",
-      "[WDM] - Get LATEST driver version for 96.0.4664\n",
-      "[WDM] - Driver [/Users/nathanhedgeman/.wdm/drivers/chromedriver/mac64/96.0.4664.45/chromedriver] found in cache\n",
-      "<ipython-input-8-2a3337b52e6d>:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 98.0.4758\n",
+      "Get LATEST chromedriver version for 98.0.4758 google-chrome\n",
+      "Driver [/Users/nathanhedgeman/.wdm/drivers/chromedriver/mac64/98.0.4758.80/chromedriver] found in cache\n",
+      "/var/folders/qj/lf30psn544jbkxz0g333d31m0000gn/T/ipykernel_38368/1380455670.py:3: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n"
      ]
     },
@@ -179,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
