--- a/Scrappers/Venue Scrappers/Selenium JAVA Scrappers/Google Calendar Scrapper.ipynb
+++ b/Scrappers/Venue Scrappers/Selenium JAVA Scrappers/Google Calendar Scrapper.ipynb
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Time.sleep(4)\n",
+    "'''Time.sleep(4)\n",
     "keys_brewing = driver.find_element_by_xpath('//*[@id=\"tkQpTb\"]/div/div[1]/li/label/div[1]/div/div')\n",
     "keys_brewing.click()\n",
     "Time.sleep(2)\n",
@@ -180,16 +180,16 @@
     "Time.sleep(2)\n",
     "island_time_html = driver.page_source\n",
     "page_source_array.append(island_time_html)\n",
-    "island_time.click()\n",
+    "island_time.click()'''\n",
     "\n",
-    "mattisons_city = driver.find_element_by_xpath('//*[@id=\"tkQpTb\"]/div/div[9]/li/label/div[1]/div/div')\n",
+    "mattisons_city = driver.find_element_by_xpath('//*[@id=\"tkQpTb\"]/div/div[10]/li/label/div[1]/div/div')\n",
     "mattisons_city.click()\n",
     "Time.sleep(2)\n",
     "mattisons_city_html = driver.page_source\n",
     "page_source_array.append(mattisons_city_html)\n",
-    "mattisons_city.click()\n",
     "\n",
-    "mattisons_river = driver.find_element_by_xpath('//*[@id=\"tkQpTb\"]/div/div[10]/li/label/div[1]/div/div')\n",
+    "\n",
+    "'''mattisons_river = driver.find_element_by_xpath('//*[@id=\"tkQpTb\"]/div/div[10]/li/label/div[1]/div/div')\n",
     "mattisons_river.click()\n",
     "Time.sleep(2)\n",
     "mattisons_river_html = driver.page_source\n",
@@ -232,7 +232,201 @@
     "woodys.click()\n",
     "\n",
     "Time.sleep(2)\n",
-    "driver.quit()"
+    "driver.quit()'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db61a44f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shows = []\n",
+    "soup = BS(mattisons_city_html, 'lxml')\n",
+    "days = soup.find_all('div', role ='rowgroup')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "15ef063c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for day in days:\n",
+    "    for day in days:\n",
+    "        holder_date = day.find('div', role = 'link')\n",
+    "        if holder_date == None:\n",
+    "            continue\n",
+    "        event_date = holder_date['aria-label']\n",
+    "    \n",
+    "        date = event_date.strip(', today'); ''' !!!!!GOT DATE!!!!! '''\n",
+    "        \n",
+    "        event_discriptions = day.find_all('div', role ='row')\n",
+    "        for x in event_discriptions:\n",
+    "            name = x.find('div', role = 'button')\n",
+    "\n",
+    "            if name == None:\n",
+    "                continue\n",
+    "\n",
+    "            '''Green Iguana FIX'''\n",
+    "            if name.text == ' band': \n",
+    "                continue\n",
+    "\n",
+    "            \n",
+    "            '''!!!!!FILTER!!!!!!'''\n",
+    "            if any([x in name.text for x in ex_array]): \n",
+    "                continue\n",
+    "            \n",
+    "            else:\n",
+    "                pres = x.find('div', role = 'presentation')\n",
+    "                raw_time = pres.find('div', role = 'gridcell')\n",
+    "                start_time = raw_time.text.split(sep=' ', maxsplit=1)[0]\n",
+    "                \n",
+    "                if 'pm' in start_time:\n",
+    "                    final_time = start_time\n",
+    "\n",
+    "                elif 'am' in start_time:\n",
+    "                    final_time = start_time\n",
+    "                \n",
+    "                else:\n",
+    "                    final_time = start_time + 'pm'\n",
+    "\n",
+    "                if 'All' in final_time:\n",
+    "                    final_time = '7pm'\n",
+    "                              \n",
+    "                show_date = date + \" \" + final_time\n",
+    "\n",
+    "                band_name = ''\n",
+    "                split_name1 = name.text.split(sep=' |', maxsplit=1)[0]\n",
+    "                split_name1 = split_name1.split(sep=' @', maxsplit=1)[0]\n",
+    "                \n",
+    "                try:\n",
+    "                    '''Bahi Hut FIX'''\n",
+    "                    split_name1 = split_name1.split(sep='Music: ', maxsplit=1)[1]\n",
+    "                except:\n",
+    "                    pass\n",
+    "                \n",
+    "                split_name1 = split_name1.split(sep=' solo: ', maxsplit=1)[0]\n",
+    "                split_name2 = ''\n",
+    "                \n",
+    "                if split_name1 == None:\n",
+    "                    split_name2 = name.text.split(sep=' |', maxsplit=1)[0]\n",
+    "                    plit_name2 = split_name2.text.split(sep=' @', maxsplit=1)[0]\n",
+    "                    \n",
+    "                    try:\n",
+    "                        '''Bahi Hut FIX'''\n",
+    "                        split_name2 = split_name2.split(sep='Music: ', maxsplit=1)[1] \n",
+    "                    except:\n",
+    "                        pass\n",
+    "                    \n",
+    "                    split_name2 = split_name2.split(sep=' solo: ', maxsplit=1)[0]\n",
+    "                    band_name = split_name2\n",
+    "                else:\n",
+    "                    band_name = split_name1\n",
+    "\n",
+    "                if ' \"Himself\"' in band_name:\n",
+    "                    band_name = band_name.replace(' \"Himself\"', '')\n",
+    "\n",
+    "                this_time = parse(show_date)\n",
+    "                date_string = '{:%b %d, %Y %-I:%M%p}'.format(this_time)\n",
+    "\n",
+    "                try:\n",
+    "                    showDict = {}\n",
+    "                    showDict['band'] = band_name\n",
+    "                    showDict['dateString'] = date_string\n",
+    "                    shows.append(showDict)\n",
+    "\n",
+    "                except AttributeError as ex:\n",
+    "                    print('Error', ex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "a27f42d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "venDict = {}\n",
+    "venDict['venueName'] = venue_name\n",
+    "venDict['shows'] = shows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "0fa93a70",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "d3a15fa7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "venue_array = [venDict]\n",
+    "finalDict = {}\n",
+    "finalDict['venue'] = venue_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83b21cde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(finalDict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f993b776",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mattison's City Grille Complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "venDict = {}\n",
+    "venDict['venueName'] = \"Mattison's City Grille\"\n",
+    "venDict['shows'] = shows\n",
+    "\n",
+    "venue_array = [venDict]\n",
+    "finalDict = {}\n",
+    "finalDict['venue'] = venue_array\n",
+    "\n",
+    "#Save To json file\n",
+    "save_path = '/Volumes/Work/Face2Face/Xity/streetTeam/Scrappers/Show Data/Venue Data'\n",
+    "file_name = \"Mattison's City Grille\" + '.json'\n",
+    "complete_name = os.path.join(save_path, file_name)\n",
+    "\n",
+    "file = open(complete_name, 'w')\n",
+    "file.write(json.dumps(finalDict, indent = 2))\n",
+    "file.close()\n",
+    "shows = []\n",
+    "print(\"Mattison's City Grille Complete!\")"
    ]
   },
   {
@@ -342,7 +536,7 @@
     "    finalDict['venue'] = venue_array\n",
     "\n",
     "    #Save To json file\n",
-    "    save_path = '/Users/nathanhedgeman/Documents/Scrappers/Show Data'\n",
+    "    save_path = '/Volumes/Work/Face2Face/Xity/streetTeam/Scrappers/Show Data/Venue Data'\n",
     "    file_name = venue_name + '.json'\n",
     "    complete_name = os.path.join(save_path, file_name)\n",
     "\n",
@@ -350,7 +544,7 @@
     "    file.write(json.dumps(finalDict, indent = 2))\n",
     "    file.close()\n",
     "    shows = []\n",
-    "    print(\"Complete!\")"
+    "    print(f\"{venue_name} Complete!\")"
    ]
   },
   {
@@ -396,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
