--- a/Scrappers/Venue Scrappers/Basic HTML Scrappers/Gotonight/Venue Template GoTonight_Scrapper.ipynb
+++ b/Scrappers/Venue Scrappers/Basic HTML Scrappers/Gotonight/Venue Template GoTonight_Scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "1e2c9b88",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "b22a7222",
    "metadata": {},
    "outputs": [],
@@ -33,13 +33,13 @@
     "#    soup = BeautifulSoup(html_file, 'lxml')\n",
     "\n",
     "#From Website\n",
-    "source = requests.get('https://www.gotonight.com/venues/venue/?id=***').text\n",
+    "source = requests.get('https://gotonight.com/venues/venue/?id=').text\n",
     "soup = BeautifulSoup(source, 'lxml')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "id": "bddeae06",
    "metadata": {},
    "outputs": [],
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "8912208f",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Data Model Properties\n",
-    "venue_name = \"Defualt Template\"\n",
+    "venue_name = \"************\"\n",
     "band_name = \"**********\"\n",
     "date_string = ''\n",
     "shows = []"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "285602d4",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "id": "086a4189",
    "metadata": {},
    "outputs": [],
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "id": "3f2598d3",
    "metadata": {},
    "outputs": [
@@ -188,7 +188,7 @@
     "finalDict['venue'] = venue_array\n",
     "\n",
     "#Save To json file\n",
-    "save_path = '/Users/nathanhedgeman/Documents/Scrappers/Show Data'\n",
+    "save_path = '/Volumes/Work/Face2Face/Xity/streetTeam/Scrappers/Show Data/Venue Data'\n",
     "file_name = venue_name + '.json'\n",
     "complete_name = os.path.join(save_path, file_name)\n",
     "\n",
@@ -217,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.1"
   }
  },
  "nbformat": 4,
