--- a/Scrappers/Venue Scrappers/Selenium JAVA Scrappers/BlueRooster_Scrapper.ipynb
+++ b/Scrappers/Venue Scrappers/Selenium JAVA Scrappers/BlueRooster_Scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "bacd747b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "7bb1b49a",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "2dc46b1d",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "1c86d487-c517-439c-bc31-b7e2b0a4f7fc",
    "metadata": {},
    "outputs": [
@@ -140,15 +140,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[WDM] - \n",
       "\n",
-      "[WDM] - ====== WebDriver manager ======\n",
-      "[WDM] - Current google-chrome version is 95.0.4638\n",
-      "[WDM] - Get LATEST driver version for 95.0.4638\n",
-      "[WDM] - Driver [/Users/nathanhedgeman/.wdm/drivers/chromedriver/mac64/95.0.4638.54/chromedriver] found in cache\n",
-      "/var/folders/qj/lf30psn544jbkxz0g333d31m0000gn/T/ipykernel_17161/2796233756.py:4: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "\n",
+      "====== WebDriver manager ======\n",
+      "Current google-chrome version is 98.0.4758\n",
+      "Get LATEST chromedriver version for 98.0.4758 google-chrome\n",
+      "There is no [mac64] chromedriver for browser  in cache\n",
+      "Trying to download new driver from https://chromedriver.storage.googleapis.com/98.0.4758.80/chromedriver_mac64.zip\n",
+      "Driver has been saved in cache [/Users/nathanhedgeman/.wdm/drivers/chromedriver/mac64/98.0.4758.80]\n",
+      "/var/folders/qj/lf30psn544jbkxz0g333d31m0000gn/T/ipykernel_38118/2796233756.py:4: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(ChromeDriverManager().install())\n",
-      "/var/folders/qj/lf30psn544jbkxz0g333d31m0000gn/T/ipykernel_17161/2796233756.py:15: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
+      "/var/folders/qj/lf30psn544jbkxz0g333d31m0000gn/T/ipykernel_38118/2796233756.py:15: DeprecationWarning: find_element_by_* commands are deprecated. Please use find_element() instead\n",
       "  driver.find_element_by_xpath('/html/body/div/div[2]/div/div/div/div[1]/article/div/div/div[2]/div[2]/form/div[1]/div/div/div[3]/input').click()\n"
      ]
     },
